overflow-x fix attempt

--- a/assets/main.css
+++ b/assets/main.css
@@ -12,5 +12,5 @@
 
 html, body {
 	width: auto!important;
-	overflow-x: hidden!important;
+	/*overflow-x: hidden!important;*/
 }
